success alignement menu

--- a/style.css
+++ b/style.css
@@ -1140,6 +1140,7 @@ hr {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border: 1px solid red;
   width: 100%;
   margin: 1rem;
   overflow-x: visible;
@@ -1165,6 +1166,7 @@ hr {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  border: 1px solid green;
   width: 100%;
   border-radius: 1.5rem;
   background-color: #FFFFFF;
@@ -1174,6 +1176,7 @@ hr {
 }
 
 .conteneur_titre_et_description {
+  border: 1px solid fuchsia;
   padding: 1rem 1rem 1rem 1rem;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -1186,6 +1189,8 @@ hr {
 }
 
 .titre_food {
+  white-space: nowrap;
+  text-overflow: ellipsis;
   font-size: 1.5rem;
   font-weight: 600;
 }
@@ -1197,6 +1202,7 @@ hr {
 }
 
 .conteneur_prix {
+  border: 1px solid aqua;
   padding: 0;
   margin: 0;
   padding: 1rem 2rem 0.5rem 1rem;
@@ -1206,11 +1212,13 @@ hr {
   right: 0;
   padding-right: 0;
   z-index: 2;
+  margin-left: auto;
 }
 
 .conteneur_prix h2 {
   padding: 0;
   margin: 0;
+  padding-right: 1rem;
 }
 
 /* INTERIEUR DU MENU DEBUT */
