retrait border color

--- a/style.scss
+++ b/style.scss
@@ -996,7 +996,7 @@ hr {
 .conteneur_E_P_D {
 	cursor: pointer;
 	@include struct-col-space;
-	border: 1px solid red;
+	// border: 1px solid red;
 	width: 100%;
 	// padding: 0 1rem 0 1rem;
 	// margin: 0 1rem 0 1rem;
@@ -1009,7 +1009,7 @@ hr {
 	@include struct_row_center;
 	text-align: left;
 	justify-content: space-between;
-	border: 1px solid green;
+	// border: 1px solid green;
 	width: 100%;
 	border-radius: 1.5rem;
 	background-color: $initial-color;
@@ -1021,7 +1021,7 @@ hr {
 }
 
 .conteneur_titre_et_description {
-	border: 1px solid fuchsia;
+	// border: 1px solid fuchsia;
 	padding: 1rem 1rem 1rem 1rem;
 	white-space: nowrap;
 	text-overflow: ellipsis;
@@ -1053,7 +1053,7 @@ hr {
 }
 
 .conteneur_prix {
-	border: 1px solid aqua;
+	// border: 1px solid aqua;
 	@include reset_pad_marg;
 	padding: 1rem 2rem 0.5rem 1rem;
 	align-self: flex-end;
