--- a/style.css
+++ b/style.css
@@ -987,6 +987,7 @@ hr {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  bottom: 4.5rem;
 }
 
 .conteneur_titre_coeur {
@@ -1249,6 +1250,19 @@ hr {
           transition-delay: 1s;
   -webkit-transition-timing-function: ease-in-out;
           transition-timing-function: ease-in-out;
+}
+
+.double_fond_gris {
+  position: absolute;
+  background-color: #e9e9e9;
+  z-index: 3;
+  position: absolute;
+  background-color: #e9e9e9;
+  width: 98.33%;
+  height: 6rem;
+  z-index: 3;
+  top: 120rem;
+  left: 8px;
 }
 
 @media only screen and (min-width: 1024px) {
