--- a/style.scss
+++ b/style.scss
@@ -863,7 +863,7 @@ hr {
 	position: relative;
 	@include struct-col-space;
 	justify-content: space-between;
-	// bottom: 4.5rem;
+	bottom: 4.5rem;
 }
 
 .conteneur_titre_coeur {
@@ -1119,6 +1119,21 @@ hr {
 }
 
 // PARTIE ANIMATION VERTE DU MENU FIN
+
+.double_fond_gris {
+	position: absolute;
+	background-color: $color-location;
+	z-index: 3;	position: absolute;
+    background-color: #e9e9e9;
+    width: 98.33%;
+    height: 6rem;
+    z-index: 3;
+    top: 120rem;
+    left: 8px;
+}
+
+
+
 
 // MENU NOUVEAU FIN
 
