--- a/Utils/media_queries.scss
+++ b/Utils/media_queries.scss
@@ -32,6 +32,12 @@
             margin-left: auto;
             margin-right: auto;
         }
+
+        .menu_fond_gris {
+            display: grid;
+            grid-template-columns: auto auto auto;
+        }
+
     }
 
 
