--- a/style.scss
+++ b/style.scss
@@ -124,12 +124,27 @@ header,
 
 // spinner FIN
 
+// header DEBUT
+
 #logo_omyfood_header {
 	width: 30rem;
 	height: 3.25rem;
 	align-self: center;
 	padding-bottom: 1rem;
 }
+
+.title_resto {
+	@include div-center;
+
+	& a img {
+		width: 3rem;
+		height: 3rem;
+	}
+
+	padding-bottom: 1rem;
+}
+
+// header FIN
 
 .presentation>h1,
 .fonctionnement>h2 {
@@ -254,16 +269,7 @@ header,
 	left: 18px;
 }
 
-.title_resto {
-	@include div-center;
 
-	& a img {
-		width: 3rem;
-		height: 3rem;
-	}
-
-	padding-bottom: 1rem;
-}
 
 .nouveau {
 	background-color: $color-tertiary;
@@ -872,21 +878,10 @@ hr {
 	@include struct_row_center;
 	justify-content: space-evenly;
 	margin-top: 3rem;
-	// height: 6rem;
 
 }
 
-// .fa-heart {
-// 	// color: blue;
-// 	content: "";
 
-// 	// background-color: aqua;
-// 	// background-clip: padding-box;
-// 	&:hover {
-// 		// animation: heart_fill 1000ms ease-in-out both;
-// 		// background-clip: padding-box;
-// 	}
-// }
 
 .premier_coeur {
 	opacity: 1;
@@ -908,7 +903,6 @@ hr {
 		}
 
 		&>.deuxieme_coeur {
-			// opacity: 1;
 			display: block;
 			color: transparent;
 			animation: heart_fill 800ms ease-in-out forwards;
@@ -919,34 +913,18 @@ hr {
 
 @keyframes heart_fill {
 	0% {
-		// color: transparent;
-		// stroke: black;
-		// color: transparent;
-		// border: 1px solid black;
-		// background: white;
 		background: -webkit-linear-gradient(#9d70d4, #f598da);
 		background-clip: border-box;
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
-		// stroke: black;
 	}
 
 
 	100% {
-		// color: red;
-		// background-color: violet;
-		// color: red;
 		background: -webkit-linear-gradient($color-primary, $color-secondary);
 		background-clip: border-box;
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
-		// color: linear-gradient(#9356DC, #FF79DA);
-		// stroke: red;
-		// fill: red;
-		// -webkit-text-stroke-width: 1px;
-		// -webkit-text-stroke-color: green;
-		// background-clip: padding-box;
-		// stroke: transparent;
 	}
 
 }
@@ -963,14 +941,12 @@ hr {
 	align-self: flex-start;
 	font-size: 1.6rem;
 	font-weight: 100;
-	// border: 1px solid red;
 	margin-bottom: .5rem;
 
 }
 
 .conteneur_titre_ligne_verte {
 	@include struct-col-space;
-	// border: 1px solid green;
 	align-self: flex-start;
 	justify-content: space-between;
 }
@@ -986,7 +962,6 @@ hr {
 
 .ligne_verte {
 	align-self: start;
-	// border: 1px solid red;
 	position: relative;
 }
 
@@ -996,10 +971,7 @@ hr {
 .conteneur_E_P_D {
 	cursor: pointer;
 	@include struct-col-space;
-	// border: 1px solid red;
 	width: 100%;
-	// padding: 0 1rem 0 1rem;
-	// margin: 0 1rem 0 1rem;
 	margin: 1rem;
 	overflow-x: visible;
 
@@ -1009,19 +981,16 @@ hr {
 	@include struct_row_center;
 	text-align: left;
 	justify-content: space-between;
-	// border: 1px solid green;
 	width: 100%;
 	border-radius: 1.5rem;
 	background-color: $initial-color;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-	// margin: 1rem 1rem 1rem 1rem;
 	margin: 0 1rem 0 1rem;
 
 
 }
 
 .conteneur_titre_et_description {
-	// border: 1px solid fuchsia;
 	padding: 1rem 1rem 1rem 1rem;
 	white-space: nowrap;
 	text-overflow: ellipsis;
@@ -1041,23 +1010,19 @@ hr {
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	font-size: 1.5rem;
-	// font-size: 0.5rem;
 	font-weight: 600;
 }
 
 .description {
 	text-overflow: ellipsis;
 	font-size: 1.3rem;
-	// font-size: 0.5rem;
 	font-weight: 100;
 }
 
 .conteneur_prix {
-	// border: 1px solid aqua;
 	@include reset_pad_marg;
 	padding: 1rem 2rem 0.5rem 1rem;
 	align-self: flex-end;
-	// position: absolute;
 	position: relative;
 	right: 0;
 	padding-right: 0;
@@ -1079,14 +1044,8 @@ hr {
 .conteneur_E_P_D_niveau_1 {
 	border-radius: 15px;
 	width: 100%;
-	// display: flex;
-	// flex-direction: row;
-	// justify-content: space-between;
-	// align-items: center;
-	// border: none;
 	background-color: $initial-color;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
-	// margin-bottom: 1.5rem;
 	padding-left: 1rem;
 	z-index: 1;
 	text-overflow: ellipsis;
@@ -1096,7 +1055,6 @@ hr {
 		padding-right: 0;
 		padding-top: 0;
 		padding-bottom: 0;
-		// text-overflow: ellipsis;
 
 		&>.green {
 			outline: none;
@@ -1108,7 +1066,6 @@ hr {
 		}
 
 		&>.conteneur_prix {
-			// right: 8rem;
 			transition-delay: 1s;
 			transition-timing-function: ease-in-out;
 			
