--- a/style.css
+++ b/style.css
@@ -630,6 +630,7 @@ footer {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  margin-top: -5rem;
 }
 
 footer h1 {
@@ -1231,19 +1232,6 @@ hr {
           transition-delay: 1s;
   -webkit-transition-timing-function: ease-in-out;
           transition-timing-function: ease-in-out;
-}
-
-.double_fond_gris {
-  position: absolute;
-  background-color: #e9e9e9;
-  z-index: 3;
-  position: absolute;
-  background-color: #e9e9e9;
-  width: 98.33%;
-  height: 6rem;
-  z-index: 3;
-  top: 120rem;
-  left: 8px;
 }
 
 @media only screen and (min-width: 1024px) {
