--- a/style.scss
+++ b/style.scss
@@ -532,6 +532,7 @@ footer {
 	color: $initial-color;
 	@include struct-col-space;
 	align-items: flex-start;
+	margin-top: -5rem;
 
 	& h1 {
 		font-size: 1.5rem !important;
@@ -1077,17 +1078,17 @@ hr {
 
 // PARTIE ANIMATION VERTE DU MENU FIN
 
-.double_fond_gris {
-	position: absolute;
-	background-color: $color-location;
-	z-index: 3;	position: absolute;
-    background-color: #e9e9e9;
-    width: 98.33%;
-    height: 6rem;
-    z-index: 3;
-    top: 120rem;
-    left: 8px;
-}
+// .double_fond_gris {
+// 	position: absolute;
+// 	background-color: $color-location;
+// 	z-index: 3;	position: absolute;
+//     background-color: #e9e9e9;
+//     width: 98.33%;
+//     height: 6rem;
+//     z-index: 3;
+//     top: 120rem;
+//     left: 8px;
+// }
 
 
 
