--- a/style.scss
+++ b/style.scss
@@ -469,49 +469,49 @@ header,
 
 // nouveau coeur DEBUT
 
-.icon {
+// .icon {
 
-	width: 3rem;
-	height: 3rem;
-	overflow-y: hidden;
+// 	width: 3rem;
+// 	height: 3rem;
+// 	overflow-y: hidden;
 
-	&.heart {
+// 	&.heart {
 
-		& path {
-			stroke-dasharray: 1560;
-			stroke-dashoffset: 0;
-		}
+// 		& path {
+// 			stroke-dasharray: 1560;
+// 			stroke-dashoffset: 0;
+// 		}
 
-		&:hover {
+// 		&:hover {
 
-			& path {
-				animation: animate-heart 1s ease-in-out both;
-			}
-		}
-	}
+// 			& path {
+// 				animation: animate-heart 1s ease-in-out both;
+// 			}
+// 		}
+// 	}
 
-	& path {
-		fill: transparent;
-		stroke-width: 10;
-		stroke: black;
-	}
-}
+// 	& path {
+// 		fill: transparent;
+// 		stroke-width: 10;
+// 		stroke: black;
+// 	}
+// }
 
 
-@keyframes animate-heart {
-	0% {
-		stroke-dashoffset: 0;
-		fill: transparent;
-		opacity: 0;
-	}
+// @keyframes animate-heart {
+// 	0% {
+// 		stroke-dashoffset: 0;
+// 		fill: transparent;
+// 		opacity: 0;
+// 	}
 
-	100% {
-		opacity: 1;
-		stroke-dashoffset: 1560;
-		fill: url(#grad2);
-	}
+// 	100% {
+// 		opacity: 1;
+// 		stroke-dashoffset: 1560;
+// 		fill: url(#grad2);
+// 	}
 
-}
+// }
 
 // nouveau coeur FIN
 
@@ -879,21 +879,72 @@ hr {
 	@include struct_row_center;
 	justify-content: space-evenly;
 	margin-top: 3rem;
+	position: relative;
 
 }
 
 // coeur final DEBUT
 
 
+// .premier_coeur {
+// 	opacity: 1;
+// 	z-index: 1;
+// 	stroke: 1px;
+// }
+
+// .deuxieme_coeur {
+// 	display: none;
+// 	z-index: 0;
+// }
+
+
 .premier_coeur {
-	opacity: 1;
-	z-index: 1;
-	stroke: 1px;
+    opacity: 1;
+    // z-index: 1; /* z-index de base */
+    // z-index: 0;
+    stroke: 1px;
+    color: black;
+    /* pour premier coeur, desinge la couleur du contour */
+	font-size: 4rem;
+	position: absolute;
+
 }
 
 .deuxieme_coeur {
-	display: none;
-	z-index: 0;
+    color: transparent;
+    background: -webkit-linear-gradient(#9d70d4, #f598da);
+    // background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    opacity: 0;
+    position: absolute;
+    // left: 1rem;
+    // display: none;
+    // z-index: 0;
+    transition: opacity 1s;
+	font-size: 4rem;
+}
+
+.conteneur_coeur {
+    border: 2px solid fuchsia;
+    // transform: color;
+
+    &:hover {
+        &>.premier_coeur {
+            // color: transparent;
+            // transition: all 1s ease-in-out both;
+            // transform:color;
+            opacity: 0;
+
+        }
+
+        &>.deuxieme_coeur {
+            // color: blue;
+            // position: absolute;
+            opacity: 1;
+            left: 1rem;
+        }
+    }
 }
 
 
