preparation media query tablette

--- a/Utils/media_queries.scss
+++ b/Utils/media_queries.scss
@@ -33,6 +33,10 @@
             margin-right: auto;
         }
     }
+}
 
-
+@mixin media_tablet {
+    @include media-min($md){
+        
+    }
 }
