--- a/style.css
+++ b/style.css
@@ -916,8 +916,8 @@ hr {
   color: transparent;
   opacity: 0;
   position: absolute;
-  -webkit-transition: opacity 1s;
-  transition: opacity 1s;
+  -webkit-transition: opacity 300ms;
+  transition: opacity 300ms;
   font-size: 4rem;
   left: 0;
 }
@@ -1079,7 +1079,7 @@ hr {
   padding-right: 1rem;
 }
 
-/* INTERIEUR DU MENU DEBUT */
+/* INTERIEUR DU MENU FIN */
 .conteneur_E_P_D_niveau_1 {
   border-radius: 15px;
   width: 100%;
