--- a/style.css
+++ b/style.css
@@ -912,6 +912,7 @@ hr {
 .deuxieme_coeur {
   color: transparent;
   background: -webkit-linear-gradient(#9d70d4, #f598da);
+  background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
   opacity: 0;
@@ -1127,9 +1128,40 @@ hr {
   .carte_resto,
   .button,
   #button_explore {
-    max-width: 40vw;
+    max-width: 30vw;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+@media only screen and (min-width: 480px) and (max-width: 1024px) {
+  #restaurants {
+    padding-bottom: 5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  #restaurants .carte_resto {
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
+  }
+  #restaurants h2 {
+    margin-right: 1rem !important;
+    padding-right: 2rem !important;
+  }
+  .titre_accueil_restaurants {
+    padding: 1rem;
+    margin: 1rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
