ajout justify content titre coeur

--- a/Utils/media_queries.scss
+++ b/Utils/media_queries.scss
@@ -32,6 +32,10 @@
             margin-left: auto;
             margin-right: auto;
         }
+
+        .conteneur_titre_coeur {
+            justify-content: start !important;
+        }
     }
 }
 
