--- a/style.css
+++ b/style.css
@@ -1130,6 +1130,12 @@ hr {
     margin-left: auto;
     margin-right: auto;
   }
+  .conteneur_E_P_D_niveau_1 {
+    max-width: 40vw;
+    -ms-flex-item-align: start;
+        -ms-grid-row-align: start;
+        align-self: start;
+  }
 }
 
 @media only screen and (min-width: 480px) and (max-width: 1024px) {
