--- a/Utils/media_queries.scss
+++ b/Utils/media_queries.scss
@@ -36,6 +36,11 @@
         .conteneur_titre_coeur {
             justify-content: start !important;
         }
+
+        .conteneur_E_P_D_niveau_1 {
+            max-width: 39rem;
+            align-self: start;
+        }
     }
 }
 
