gestion bacground clip

--- a/style.scss
+++ b/style.scss
@@ -759,7 +759,7 @@ hr {
 	// background-clip: text;
 	// -webkit-background-clip: text;
 	// color: transparent;
-
+	background: ( ) no-repeat;
 	background-clip: text;
 	-webkit-background-clip: text;
 	color: transparent;
