add media query for chrome

--- a/style.scss
+++ b/style.scss
@@ -902,3 +902,9 @@ hr {
 
 @include media_desktop();
 @include media_tablet();
+
+@media all and (-webkit-min-device-pixel-ratio:0) and (min-resolution: .001dpcm) {
+    .green {
+        height: 53px;
+    }
+}
