--- a/style.css
+++ b/style.css
@@ -1176,4 +1176,10 @@ hr {
     margin: 1rem;
   }
 }
+
+@media all and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
+  .green {
+    height: 53px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
