--- a/style.scss
+++ b/style.scss
@@ -27,6 +27,7 @@
 
 body {
 	font-family: Roboto;
+	margin: 0 0 0 0;
 }
 
 .title,
@@ -436,6 +437,9 @@ header,
 	padding-left: 1rem;
 	padding-right: 1rem;
 }
+
+
+
 
 
 .heart_regular,
