--- a/style.css
+++ b/style.css
@@ -455,12 +455,26 @@ header,
   font-weight: 600;
   font-size: 1.9rem;
   margin-bottom: 0.5rem !important;
+  color: black;
+  text-decoration: none;
+}
+
+.titre_lieu h2:visited {
+  color: black;
+  text-decoration: none;
 }
 
 .titre_lieu h3 {
   font-weight: 100;
   font-size: 1.5rem;
   margin-top: 0.5rem !important;
+  color: black;
+  text-decoration: none;
+}
+
+.titre_lieu h3:visited {
+  color: black;
+  text-decoration: none;
 }
 
 .main_titre_menu {
