--- a/style.scss
+++ b/style.scss
@@ -351,13 +351,26 @@ header,
 		font-weight: 600;
 		font-size: 1.9rem;
 		margin-bottom: 0.5rem !important;
+		color: black;
+		text-decoration: none;
+
+		&:visited {
+			color: black;
+			text-decoration: none;
+		}
 	}
 
 	& h3 {
 		font-weight: 100;
 		font-size: 1.5rem;
 		margin-top: 0.5rem !important;
+		color: black;
+		text-decoration: none;
 
+		&:visited {
+			color: black;
+			text-decoration: none;
+		}
 	}
 }
 
