--- a/style.scss
+++ b/style.scss
@@ -352,11 +352,11 @@ header,
 		font-size: 1.9rem;
 		margin-bottom: 0.5rem !important;
 		color: black;
-		text-decoration: none;
+		text-decoration: none !important;
 
 		&:visited {
 			color: black;
-			text-decoration: none;
+			text-decoration: none !important;
 		}
 	}
 
@@ -365,11 +365,11 @@ header,
 		font-size: 1.5rem;
 		margin-top: 0.5rem !important;
 		color: black;
-		text-decoration: none;
+		text-decoration: none !important;
 
 		&:visited {
 			color: black;
-			text-decoration: none;
+			text-decoration: none !important;
 		}
 	}
 }
