test underline position

--- a/style.scss
+++ b/style.scss
@@ -353,6 +353,7 @@ header,
 		margin-bottom: 0.5rem !important;
 		color: black;
 		text-decoration: none !important;
+		text-underline-position: under;
 
 		&:visited {
 			color: black;
@@ -366,6 +367,7 @@ header,
 		margin-top: 0.5rem !important;
 		color: black;
 		text-decoration: none !important;
+		text-underline-position: under;
 
 		&:visited {
 			color: black;
