--- a/style.css
+++ b/style.css
@@ -456,12 +456,13 @@ header,
   font-size: 1.9rem;
   margin-bottom: 0.5rem !important;
   color: black;
-  text-decoration: none;
+  text-decoration: none !important;
+  text-underline-position: under;
 }
 
 .titre_lieu h2:visited {
   color: black;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 .titre_lieu h3 {
@@ -469,12 +470,13 @@ header,
   font-size: 1.5rem;
   margin-top: 0.5rem !important;
   color: black;
-  text-decoration: none;
+  text-decoration: none !important;
+  text-underline-position: under;
 }
 
 .titre_lieu h3:visited {
   color: black;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 .main_titre_menu {
