--- a/style.css
+++ b/style.css
@@ -553,12 +553,6 @@ header,
   padding-right: 1rem;
 }
 
-.heart_regular,
-.heart_filled {
-  width: 3rem;
-  height: 3rem;
-}
-
 .restaurants,
 .presentation {
   background: #f6f6f6;
@@ -1166,6 +1160,32 @@ hr {
         -ms-grid-row-align: start;
         align-self: start;
   }
+}
+
+.titre_accueil_restaurants {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.titre_accueil_restaurants h2 {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.restaurants {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: initial;
+  -webkit-box-direction: initial;
+      -ms-flex-direction: initial;
+          flex-direction: initial;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 @media only screen and (min-width: 480px) and (max-width: 1024px) {
