--- a/style.scss
+++ b/style.scss
@@ -448,10 +448,10 @@ header,
 
 
 
-.heart_regular,
-.heart_filled {
-	@include icon_resize_heart;
-}
+// .heart_regular,
+// .heart_filled {
+// 	@include icon_resize_heart;
+// }
 
 .restaurants,
 .presentation {
