--- a/style.css
+++ b/style.css
@@ -1133,6 +1133,29 @@ hr {
 
 /* INTERIEUR DU MENU FIN */
 @media only screen and (min-width: 1024px) {
+  .titre_accueil_restaurants {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .titre_accueil_restaurants h2 {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .restaurants {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: initial;
+    -webkit-box-direction: initial;
+        -ms-flex-direction: initial;
+            flex-direction: initial;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
   .button_commander {
     max-width: 30rem !important;
   }
@@ -1173,7 +1196,8 @@ hr {
         -ms-grid-row-align: center;
         align-self: center;
   }
-  .restaurants {
+  #restaurants {
+    padding-bottom: 5rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1181,26 +1205,13 @@ hr {
     -webkit-box-direction: initial;
         -ms-flex-direction: initial;
             flex-direction: initial;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
     -ms-flex-pack: distribute;
         justify-content: space-around;
-  }
-  #restaurants {
-    padding-bottom: 5rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   #restaurants .carte_resto {
     margin-left: 1rem !important;
