ajustement h2 menu index.html

--- a/style.scss
+++ b/style.scss
@@ -270,7 +270,13 @@ header,
 	left: 18px;
 }
 
-
+.titre_accueil_restaurants {
+	background: #F6F6F6;
+	margin-bottom: 0;
+	margin-top: 3rem;
+	margin-left: 1rem;
+	padding-top: 3rem;
+}
 
 .nouveau {
 	background-color: $color-tertiary;
