--- a/Utils/media_queries.scss
+++ b/Utils/media_queries.scss
@@ -105,9 +105,9 @@
             }
         }
 
-        .titre_accueil_restaurants {
-            padding: 1rem;
-            margin: 1rem;
-        }
+        // .titre_accueil_restaurants {
+        //     padding: 1rem;
+        //     margin: 1rem;
+        // }
     }
 }
