--- a/style.css
+++ b/style.css
@@ -359,6 +359,14 @@ header,
   left: 18px;
 }
 
+.titre_accueil_restaurants {
+  background: #F6F6F6;
+  margin-bottom: 0;
+  margin-top: 3rem;
+  margin-left: 1rem;
+  padding-top: 3rem;
+}
+
 .nouveau {
   background-color: #99E2D0;
   color: #1b6150;
@@ -1220,10 +1228,6 @@ hr {
   #restaurants h2 {
     margin-right: 1rem !important;
     padding-right: 2rem !important;
-  }
-  .titre_accueil_restaurants {
-    padding: 1rem;
-    margin: 1rem;
   }
 }
 
