--- a/style.scss
+++ b/style.scss
@@ -271,7 +271,7 @@ header,
 }
 
 .titre_accueil_restaurants {
-	background: #F6F6F6;
+	background: $color-btn;
 	margin-bottom: 0;
 	margin-top: 3rem;
 	margin-left: 1rem;
