--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ header,
 }
 
 .titre_accueil_restaurants {
-  background: #F6F6F6;
+  background: #f6f6f6;
   margin-bottom: 0;
   margin-top: 3rem;
   margin-left: 1rem;
