--- a/style.css
+++ b/style.css
@@ -963,6 +963,7 @@ hr {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  color: black;
 }
 
 .conteneur_coeur i:hover {
