--- a/style.scss
+++ b/style.scss
@@ -807,7 +807,7 @@ hr {
 	display: flex !important;
 	height: 3rem;
 	align-items: center;
-	color: black;
+	color: black !important;
 
 	&:hover {
 		font-weight: bold;
