--- a/style.scss
+++ b/style.scss
@@ -808,6 +808,7 @@ hr {
 	height: 3rem;
 	align-items: center;
 	color: black !important;
+	text-underline-position: under;
 
 	&:hover {
 		font-weight: bold;
