--- a/style.css
+++ b/style.css
@@ -976,6 +976,28 @@ hr {
           animation: test 3s forwards;
 }
 
+.fa-heart {
+  font-size: 3rem;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  height: 3rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: black !important;
+  text-underline-position: under;
+}
+
+.fa-heart:hover {
+  font-weight: bold;
+  background: -webkit-linear-gradient(#9356DC, #FF79DA);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: test 3s forwards;
+          animation: test 3s forwards;
+}
+
 @-webkit-keyframes test {
   from {
     background-position-y: 2.8rem;
