--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ header,
   background: #f6f6f6;
   margin-bottom: 0;
   margin-top: 3rem;
-  margin-left: 1rem;
+  padding-left: 1rem;
   padding-top: 3rem;
 }
 
