--- a/style.scss
+++ b/style.scss
@@ -274,7 +274,7 @@ header,
 	background: $color-btn;
 	margin-bottom: 0;
 	margin-top: 3rem;
-	margin-left: 1rem;
+	padding-left: 1rem;
 	padding-top: 3rem;
 }
 
