--- a/style.css
+++ b/style.css
@@ -330,6 +330,15 @@ header,
           justify-content: flex-start;
 }
 
+.fa-arrow-left {
+  font-size: 3rem;
+  color: black;
+}
+
+.fa-arrow-left:visited {
+  color: black;
+}
+
 .logo_fonctionnement {
   margin-right: 2rem;
   margin-left: 2rem;
