--- a/style.scss
+++ b/style.scss
@@ -45,8 +45,16 @@ header,
 
 
 
-.title {
+// .title {
+// 	width: auto;
+// }
+
+header h1 {
+	font-family: Shrikhand;
+	font-size: 3rem;
+	font-weight: 800;
 	width: auto;
+	overflow-x: initial !important;
 }
 
 header,
