logo ohmyfood footer

--- a/style.css
+++ b/style.css
@@ -46,6 +46,15 @@ header h1 {
   overflow-x: initial !important;
 }
 
+footer h3 {
+  font-family: Shrikhand;
+  font-size: 2rem;
+  font-weight: 800;
+  width: auto;
+  overflow-x: initial !important;
+  color: #FFFFFF;
+}
+
 header,
 .presentation {
   display: -webkit-box;
